// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ImageContent 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "elevation": 3,
      },
      false,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": -0.24,
          "lineHeight": 20,
        },
        Array [
          Object {
            "color": "rgba(0,0,0,0.87)",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "flex": 1,
            "marginBottom": 8,
          },
        ],
      ]
    }
  >
    test image
  </Text>
  <View
    style={
      Array [
        Object {
          "aspectRatio": 1.3333333333333333,
          "backgroundColor": "rgba(255, 255, 255, 255)",
          "borderColor": "rgba(229, 229, 234, 255)",
          "borderWidth": 1,
          "width": "100%",
        },
        Object {
          "marginLeft": -16,
          "width": 750,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
    testID="image-viewer"
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        borderRadius={0}
        source={
          Object {
            "uri": "http://localhost:1337/fake-image.png",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders ImageContent on comments mode 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "elevation": 3,
      },
      Object {
        "marginBottom": -70,
      },
    ]
  }
>
  <Text
    numberOfLines={1}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "fontWeight": "400",
          "letterSpacing": -0.24,
          "lineHeight": 20,
        },
        Array [
          Object {
            "color": "rgba(0,0,0,0.87)",
          },
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "System",
            "fontWeight": "400",
          },
          Object {
            "flex": 1,
            "marginBottom": 8,
          },
        ],
      ]
    }
  >
    test image
  </Text>
  <View
    style={
      Array [
        Object {
          "aspectRatio": 1.3333333333333333,
          "backgroundColor": "rgba(255, 255, 255, 255)",
          "borderColor": "rgba(229, 229, 234, 255)",
          "borderWidth": 1,
          "width": "100%",
        },
        Object {
          "marginLeft": -16,
          "width": 750,
        },
        Object {
          "borderRadius": 0,
        },
      ]
    }
    testID="image-viewer"
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        borderRadius={0}
        source={
          Object {
            "uri": "http://localhost:1337/fake-image.png",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;
